HotFix to the default branch to enable repository dispatch

--- a/.github/workflows/collection.yml
+++ b/.github/workflows/collection.yml
@@ -10,6 +10,7 @@ jobs:
         with:
           ref: ${{ github.event.client_payload.branch }}
       - name: Dispatch workflow
+        if: github.event.client_payload.job == "one"
         run: |
           git branch --show-current
           echo "Dispatched One"
@@ -20,6 +21,7 @@ jobs:
         with:
           ref: ${{ github.event.client_payload.branch }}
       - name: Dispatch workflow
+        if: github.event.client_payload.job == "two"
         run: |
           git branch --show-current
           echo "Dispatched Two"
