--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
           curl -X POST https://api.github.com/repos/girdharshubham/github-actions-repository-dispatch/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.ACCESS_TOKEN }} \
-          --data '{"event_type": "one", "client_payload": { "branch": "'"$CURRENT_BRANCH"'" }}'
+          --data '{"event_type": "one", "client_payload": { "branch": "'"$CURRENT_BRANCH"'", "job": "one" }}'
